--- a/public/simpleWebRTC.html
+++ b/public/simpleWebRTC.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <script src="http://simplewebrtc.com/latest.js"></script> 
+<style type="text/css">
+<!--
+video {
+  height: 120px;
+}
+-->
+</style>
     </head>
     <body>
         <div id="localVideo"></div>
