add video tags. codec

--- a/public/video.html
+++ b/public/video.html
@@ -7,9 +7,20 @@
 </style>
     </head>
     <body>
-      <p>Video Tag Sample</p>
-      <video controls autoplay width="500px">
-        <source src="./videos/e23.mp4" />
+      <h2>Video Tag Sample
+      <p>MP4</p>
+      <video controls autoplay>
+        <source src="./videos/test_moview.mp4.mp4">
+        <p>Not Support Browser</p>
+      </video>
+      <p>OGV</p>
+      <video controls autoplay>
+        <source src="./videos/test_moview.oggtheora.ogv">
+        <p>Not Support Browser</p>
+      </video>
+      <p>WebM</p>
+      <video controls autoplay>
+        <source src="./videos/test_moview.webmhd.webm">
         <p>Not Support Browser</p>
       </video>
 <script>
